chore: added Story type

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -12,11 +12,8 @@ $page-blue: #0070f3;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  h1 {
-    color: red;
-    font-size: 10rem;
-  }
+  width: 50%;
+  margin: auto;
 }
 
 .footer {
