--- a/app/globals.css
+++ b/app/globals.css
@@ -10,14 +10,21 @@ body {
 
 a {
   color: inherit;
-  text-decoration: none;
 }
 
 * {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+pre {
+  font-weight: 100;
+  display: inline;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 2px;
+  padding: 0 4px 2px 8px;
+}
+
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -25,4 +32,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
