--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -37,8 +37,14 @@ $hacker-news-teal: #0b8484;
       margin-bottom: 1rem;
     }
 
-    ul > li {
-      list-style-type: none;
+    ul {
+      padding: 0;
+      margin: 0;
+
+      > li {
+        list-style-type: none;
+        margin-top: 2rem;
+      }
     }
 
     .storyCloser {
@@ -52,6 +58,13 @@ $hacker-news-teal: #0b8484;
       color: lighten($hacker-news-dark, 10%);
       text-underline-offset: 5px;
       font-weight: 600;
+
+      &:hover::after {
+        content: " 👀 ";
+        position: relative;
+        right: 0px;
+        top: 0;
+      }
     }
 
     .heroTeaser {
@@ -67,7 +80,6 @@ $hacker-news-teal: #0b8484;
     article {
       position: relative;
       background: $hacker-news-orange;
-      margin-top: 2rem;
       padding-left: 15rem;
       height: 156px;
       border-radius: 4px;
@@ -197,6 +209,67 @@ $hacker-news-teal: #0b8484;
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+}
+
+@media (max-width: 900px) {
+  .storyTitle {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 640px) {
+  .container {
+    padding-left: 0;
+    padding-right: 0;
+
+    .main {
+      .title {
+        font-size: 2rem;
+      }
+
+      .heroTeaser {
+        font-size: 1rem;
+      }
+
+      ul {
+        > li {
+          &:not(:first-child) {
+            margin-top: 1px;
+          }
+
+          article {
+            padding-left: 10rem;
+
+            .readMoreLink {
+              font-size: 0.8rem;
+            }
+
+            .contentWrapper {
+              padding: 0.5rem 0.5rem 0.5rem 1rem;
+
+              .articleHeader {
+                flex-direction: column;
+              }
+              .storyTitle {
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 3;
+                -webkit-box-orient: vertical;
+              }
+            }
+
+            .storyImageWrapper {
+              width: 10rem;
+            }
+            .storyScore {
+              left: 70px;
+            }
+          }
+        }
+      }
+    }
   }
 }
 
